[package]
name = "pcli2-rig"
version = "0.1.0"
edition = "2024"
description = "A beautiful TUI-based local AI agent powered by Rig and Ollama"
authors = ["Physna"]
repository = "https://github.com/jchultarsky101/pcli2-rig.git"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "rt-multi-thread", "macros"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AI Framework
rig-core = { version = "0.31", features = ["rmcp"] }
rmcp = "0.1"

# TUI
ratatui = "0.30"
crossterm = "0.28"
tui-markdown = "0.3"

# Utilities
unicode-width = "0.2"
dirs = "6"
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
