[package]
name = "pcli2-rig"
version = "0.2.0"
edition = "2024"
description = "A beautiful TUI-based local AI agent powered by Rig and Ollama"
authors = ["Physna"]
repository = "https://github.com/jchultarsky101/pcli2-rig.git"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# AI Framework
rig-core = { version = "0.31", features = ["rmcp"] }
rmcp = { version = "0.13", features = ["client-side-sse", "client", "transport-streamable-http-client-reqwest"] }

# TUI
ratatui = "0.30"
crossterm = "0.28"
tui-markdown = "0.3"

# Utilities
unicode-width = "0.2"
dirs = "6"
once_cell = "1.19"
ansi-to-tui = "8.0"

# System monitoring
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
gilt = "0.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
